[package]
name = "cubox"
version = "0.2.0"
authors = ["Jianan Sun <isunjnl@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["cli", "memo", "cubox"]
categories = ["command-line-utilities"]
description = "Take cubox memo in your terminal"
readme = "README.md"
repository = "https://github.com/isunjn/cubox-terminal"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getopts = "0.2"
dirs = "4.0.0"
chrono = {version = "0.4", features = ["serde"] }
colored = "2.0.0"

[[bin]]
name = "cu"
path = "src/main.rs"